# Backtester

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run.py  run_with_ui.py  sp500_close.csv
src/api/: main.py  tests.py
src/backtester/analytics/: metrics.py
src/backtester/core/: clock.py  engine.py  events.py  interfaces.py
src/backtester/data/: csv_handler.py  datastore.py
src/backtester/data/csv/: pe_ratio_full_sp500.csv
src/backtester/data/loaders/: base_loader.py  csv_loader.py
src/backtester/execution/: broker_sim.py
src/backtester/portfolio/: portfolio.py
src/backtester/strategy/: base.py  correlationStrategy.py  pe_ratio_strategy.py
src/interfaces/: streamlit_app.py
src/utils/: computeMA50.py
tests/: random_tests.py  test_engine.py
