[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtester"
version = "0.1.0"
description = "Event-driven backtesting framework"
authors = [{name = "Thomas Laumonier", email = "thomaslaumonier@orange.fr"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2",
    "typer[all]>=0.9",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"